# human-bot-full

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  main.py  my_test.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_10_sessions.py  run_test.sh  start_adspower.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: ci.yml  release.yml
config/: settings.yaml
dashboard/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.css  App.tsx  index.css  vite-env.d.ts
dashboard/src/components/: ActivityChart.css  ActivityChart.tsx  Dashboard.css  Dashboard.tsx  IPStatus.css  IPStatus.tsx  SessionList.css  SessionList.tsx  StatsCards.css  StatsCards.tsx
dashboard/src/context/: ThemeContext.tsx
dashboard/src/services/: api.ts  index.ts  websocket.ts
dashboard/src/types/: index.ts
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  PROJECT_REPORT.md
scripts/: start_all.sh  start_api.sh  start_dashboard.sh  vps_setup.sh
src/: __init__.py
src/adspower/: __init__.py  browser.py  client.py  controller.py  profile.py  profile_factory.py
src/api/: __init__.py  database_logger.py  event_logger.py  server.py  session_tracker.py
src/behavior/: __init__.py  focus.py  interaction.py  mouse.py  scroll.py  timing.py
src/bot/: __init__.py  actions.py  human_behavior.py  session.py
src/browser/: connector.py
src/core/: __init__.py  config.py  orchestrator.py
src/events/: __init__.py  logger.py  store.py  types.py
src/proxy/: __init__.py  iproyal.py  rotation.py  session_manager.py  stats.py
src/reputation/: cooldown.py  policy.py  scorer.py  store.py
src/session/: context.py  logger.py  orchestrator.py  runner.py
tests/: conftest.py  test_api.py  test_behavior.py  test_config.py  test_proxy.py
